--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	s = status -s
 	
 [user]
-	email = samkirsch@gmail.com
-	name = Kirsch, Sam
+	email = SamKirsch10@users.noreply.github.com
+	name = samkirsch10
 [push]
 	default = simple
