--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,19 @@
+[color]
+status = auto
+diff = auto
+
 [alias]
-	last = log -1 HEAD
-	a = add
-	c = commit -m
-	s = status -s
-	
+    s     = status -s
+    c     = "commit -m"
+    a     = add
+    l     = log --graph --topo-order --abbrev-commit --date=short --decorate --all --boundary --pretty=format:'%Cgreen%ad %Cred%h%Creset -%C(yellow)%d%Creset %s %Cblue[%cn]%Creset %Cblue%G?%Creset'
+    prune = remote prune origin
+
 [user]
 	email = SamKirsch10@users.noreply.github.com
-	name = samkirsch10
+	name  = samkirsch10
 [push]
 	default = simple
+[pager]
+    branch = false
+
