--- a/scripts/nodejs/k8s-switch/package.json
+++ b/scripts/nodejs/k8s-switch/package.json
@@ -8,6 +8,7 @@
     "boxen": "^6.2.1",
     "chalk": "^5.0.0",
     "commander": "^8.3.0",
+    "common-lib": "file:../common-lib",
     "fuzzy": "^0.1.3",
     "ini": "^2.0.0",
     "inquirer": "^7.3.3",
