--- a/scripts/nodejs/common-lib/package.json
+++ b/scripts/nodejs/common-lib/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "fuzzy": "^0.1.3",
     "ini": "^2.0.0",
     "inquirer": "^7.3.3",
