--- a/.gitconfig
+++ b/.gitconfig
@@ -5,9 +5,14 @@ diff = auto
 [alias]
     s     = status -s
     c     = "commit -m"
+    co    = "checkout"
+    cob   = "checkout -b"
+    cop   = checkout -p
     a     = add
+    ap    = add -p
     l     = log --graph --topo-order --abbrev-commit --date=short --decorate --all --boundary --pretty=format:'%Cgreen%ad %Cred%h%Creset -%C(yellow)%d%Creset %s %Cblue[%cn]%Creset %Cblue%G?%Creset'
     prune = remote prune origin
+
 
 [push]
 	default = simple
